--- a/doc/manual/domainsetup.tex
+++ b/doc/manual/domainsetup.tex
@@ -84,11 +84,11 @@ For what follows, the vertex type is also required and readily obtained using
 
 An overview of the generic procedure for adding a cell to a domain or segment is the following:
   \begin{itemize}
-   \item Set up an array holding the pointers the the vertices \emph{in the domain}. Do not use pointers to vertices defined outside the domain.
+   \item Set up an array holding the pointers to the vertices \emph{in the domain}. Do not use pointers to vertices defined outside the domain.
    \item Instantiate a cell object and add the array of vertex pointers to the cell
    \item Add the cell to the domain. It will be copied to the domain and can be reused for specifying the next cell.
   \end{itemize}
-Thus, the array of vertices is created as usual:
+Thus, the array of pointers to vertices is created as usual:
 \begin{lstlisting}
  VertexType * cell_vertices[3];
 \end{lstlisting}
@@ -136,9 +136,9 @@ In the same way the other triangles are pushed to the respective segment. For tr
  cell_vertices[0] = &(viennagrid::ncells<0>(domain)[2]); // vertex #2
  cell_vertices[1] = &(viennagrid::ncells<0>(domain)[3]); // vertex #3
  cell_vertices[2] = &(viennagrid::ncells<0>(domain)[4]); // vertex #4
- cell.vertices(cell_vertices); //set new cell vertices.
- seg1.push_back(cell);
+ cell.vertices(cell_vertices); // set new cell vertices.
+ seg1.push_back(cell);         // add cell to seg1
 \end{lstlisting}
 It should be noted again that one may also \lstinline|push_back()| the cells directly to the \lstinline|domain| if no segments are used.
 
-\TIP{The restriction of filling segments already at domain setup will be relaxed or removed in future versions of {\ViennaGrid}.}
+\TIP{The restriction of filling segments already at domain setup may be relaxed or removed in future versions of {\ViennaGrid}.}
