--- a/doc/manual/license.tex
+++ b/doc/manual/license.tex
@@ -1,5 +1,5 @@
 
-\chapter*{License}  \addcontentsline{toc}{chapter}{License}
+\chapter{License} 
 
 Copyright (c) 2011, Institute for Microelectronics and Institute for Analysis and Scientific Computing, TU Wien
 
