--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -96,14 +96,17 @@
 \include{entities}     %DONE, but updates required
 \include{domainconfig} %DONE
 \include{domainsetup}  %DONE
-\include{iterators}    %DONE, but updates required
+\include{iterators}    %DONE
+\include{data}         %DONE
 \include{algorithms}   %DONE
 \include{io}           %DONE
-\include{data}         %DONE
 %\include{benchmarks}  %Will be added in some later release. A single day has 24 hours only ;-)
 \include{internals}
 \include{design-decisions} %DONE
-\include{orientations} 
+
+\appendix
+
+\include{orientations} %DONE
 \include{versioning}   %DONE
 \include{changelogs}   %DONE
 \include{license}      %DONE
