--- a/doc/manual/design-decisions.tex
+++ b/doc/manual/design-decisions.tex
@@ -12,6 +12,15 @@ the history of {\ViennaGrid} and the individual preferences of the authors to a 
  is not sufficiently flexible in order to allow for an iteration over edges.
  Nevertheless, the STL-like setup and retrieval of iterators is appealing.
 
+ A run-time dispatched iterator retrieval in the spirit of 
+ \begin{lstlisting}
+ for (VertexIterator vit  = domain.begin(0);
+                     vit != domain.end(0);
+                   ++vit) {}
+ \end{lstlisting}
+ will sacrifice efficiency especially for loops with a small number of iterations, which is not an option for high-performance environments. 
+ Therefore, iterators should be accessed using a compile time dispatch.
+
  Since hard-coding function names is not an option for an parametrized traversal,
  the next choice is to add a template parameter to the \lstinline|begin| and \lstinline|end| member functions:
  \begin{lstlisting}
@@ -21,23 +30,15 @@ the history of {\ViennaGrid} and the individual preferences of the authors to a 
  \end{lstlisting}
  This concept would be sufficiently flexible to allow for an iteration over edges, facets, etc.~in a unified way.
  In fact, this approach is also chosen by DUNE \cite{DUNE} and was also used in an early prototype of {\ViennaGrid}.
- However, there is one pecularity with this approach when it comes to template functions, for which the syntax needs to be adjusted to
+ However, there is one pecularity with this approach when it comes to template member functions: According to the C++ standard, the syntax needs to be supplemented with an additional \lstinline|template| keyword, resulting in
  \begin{lstlisting}
  for (VertexIterator vit  = domain.template begin<0>();
                      vit != domain.template end<0>();
                    ++vit) {}
  \end{lstlisting}
  Apart from the fact that the \lstinline|template| keyword for member functions is probably unknown to a wide audience, 
- weird compiler messages are issued if the keyword is forgotten. Since usability and easy-to-use is one of the design goals of {\ViennaGrid},
+ weird compiler messages are issued if the keyword is forgotten. Since a high usability is one of the design goals of {\ViennaGrid},
  we kept searching for better ways with respect to our measures.
-
- Clearly, a run-time dispatched iterator retrieval in the spirit of 
- \begin{lstlisting}
- for (VertexIterator vit  = domain.begin(0);
-                     vit != domain.end(0);
-                   ++vit) {}
- \end{lstlisting}
- will sacrifice efficiency especially for loops with a small number of iterations, which is not an option for high-performance environments. 
 
  Having high-performance environments in mind, one must not forget about the advantage of index-based for loops such as 
  \begin{lstlisting}
@@ -62,22 +63,23 @@ the history of {\ViennaGrid} and the individual preferences of the authors to a 
  \end{lstlisting}
  readily expresses the intention of iterating over $0$-cells and does not suffer from the problems related to the \lstinline|template| keyword.
  Thanks to the rich overloading rule-set for free functions, an extension to \lstinline|ncells<0>(segment)| or \lstinline|ncells<0>(cell)| is immediate.
+ As presented in Chapter \ref{chap:iterators}, the \lstinline|ncells<>()| approach also allows for an index-based iteration in most cases.
  
- In retrospective, the ranges returned by \lstinline|ncells<>()| would have come up with coboundary iterators anyway, since one then has to pass the enclosing cell complex anyway.
+ In retrospective, the ranges returned by \lstinline|ncells<>()| would have come up with coboundary iterators (which were added later), since one then has to pass the enclosing cell complex anyway.
 
  \section{Default Behavior}
  A delicate question for a highly configurable library such as {\ViennaGrid} is the question of the default behavior. 
  We decided to provide the full functionality by default, even if the price to pay is a possibly slow execution at first instance.
 
  Our decision is based on mostly psychological reasoning as follows: If {\ViennaGrid} were tuned for low memory consumption and high speed by default, then a substantial set of functionality would be unavailable by default and causing compilation errors for users that just want to try a particular feature of {\ViennaGrid}. 
- It is unlikely that these users will continue to use {\ViennaGrid} if they are not able to compile a simple application without digging through the manual and searching for the correct configuration. On the contrary, if the desired feature works essentially out of the box and is fast enough, users don't even have to care about the further configuration of {\ViennaGrid}. However, if additional speed is required, there are plenty of configuration options available, each potentially leading to higher speed or lower memory footprint and thus resulting in a feeling of success. 
+ It is unlikely that these users will continue to use {\ViennaGrid} if they are not able to compile a simple application without digging through the manual and searching for the correct configuration. On the contrary, if the desired feature works essentially out of the box and is fast enough, users will not even have to care about the further configuration of {\ViennaGrid}. However, if additional speed is required, there are plenty of configuration options available, each potentially leading to higher speed or lower memory footprint and thus resulting in a feeling of success. 
 
  The bottomline of all this is that we consider it more enjoyable to tune a slower default configuration for maximum speed than to fight with compiler error messages and being forced to work through the manual. We hope that our decision indeed reflects the preferences of our users.
 
 
  \section{Segments}
  Operating on a subset $\Omega_i$ of a domain $\Omega$ is a common demand. This could be well achieved by what is known as a \emph{view}, i.e.~a selection of elements from a domain. However, a view typically possesses a considerably shorter lifetime compared to the domain, thus it is hard to store any data for the view itself.
- For this reason, segments in {\ViennaGrid} are part of the domain itself, so they usually have a comparable lifetime.
+ For this reason, segments in {\ViennaGrid} are part of the domain, thus having a comparable lifetime in typical situations.
  In particular, meta information can be stored on a segment during the domain setup stage already.
 
  Another restriction of segments in {\ViennaGrid} is that a cell can be member of at most one segment.
