--- a/doc/manual/versioning.tex
+++ b/doc/manual/versioning.tex
@@ -1,5 +1,5 @@
 
-\chapter*{Versioning}  \addcontentsline{toc}{chapter}{Versioning}
+\chapter{Versioning}
 
 Each release of {\ViennaGrid} carries a three-fold version number, given by\\
 \begin{center}
